--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                 <div id="nav_signin" class="border">
 
-                    <p class="nav_1stline">Hello Bhargav</p>
+                    <p class="nav_1stline">Hello Lahari</p>
                     <p class="nav_2ndline">Accounts & Lists</p>
 
                 </div>
